Fix flex wrap in CSS

--- a/src/index.css
+++ b/src/index.css
@@ -185,6 +185,7 @@ body {
 
 .quiz-answers {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .quiz-answers>*+* {
